--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,22 +13,33 @@ jobs:
         with:
           node-version: 14
 
-      - run: mkdir -p build
-      - name: base test case
+      - run: mkdir -p build/template
+
+      - name: test case -> base
         id: ejs
         uses: ./
         with:
-          template: <h1><%= name %> <div><%= conclusion %><div></h1>
+          template: <h1><%= name %></h1>
           vars: |
-            { "name": "${{ github.repository }}", "conclusion": "${{ steps.ejs.conclusion }}" }
+            { "name": "${{ github.repository }}" }
       
       - run: cat build/index.html
       - run: echo "${{ steps.ejs.outputs.content }}"
       
-      - name: process.env & context test case
+      - name: test case -> process.env & context
         uses: ./
         with:
           template: |
             <h1><%= process.env.GITHUB_REF %></h1> commiter: <%= context.payload.head_commit.author.name %>
           output: build/test2.html
       - run: cat build/test2.html
+
+      - name: test case -> template-file
+        uses: ./
+        with:
+          template-file: template/demo.html
+          output: build/template/demo.html
+          vars: |
+            { "htmlContent": "${{ steps.ejs.outputs.content }}" }
+
+      - run: cat build/template/demo.html
