--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "dependencies": {
     "@actions/core": "~1.6.0",
     "@actions/github": "~5.0.0",
-    "ejs": "~3.1.6",
-    "yaml": "~1.10.2"
+    "ejs": "~3.1.6"
   },
   "devDependencies": {
     "@types/ejs": "~3.1.0",
