fix: Format vars-file input.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
           output: build/demo.html
           vars-file: |
             {
-              "markdown": "./README.md"
+              "markdown": "./README.md",
               "LICENSE": "./LICENSE"
             }
 
