--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,73 +29,68 @@ jobs:
           output: build/CONTRIBUTORS.svg
           avatarSize: 36
 
-      - name: action-ejs
-        # uses: jaywcjlove/action-ejs@main
-        id: ejs
-        uses: ./
+      - name: Create Tag
+        id: create_tag
+        uses: jaywcjlove/create-tag-action@v1.3.6
         with:
-          template: |
-            <%= name %>
-          vars: |
-            { "name": "${{ steps.ejs.outputs.name }}" }
+          package-path: ./package.json
 
-      # - name: Create Tag
-      #   id: create_tag
-      #   uses: jaywcjlove/create-tag-action@v1.3.6
-      #   with:
-      #     package-path: ./package.json
+      - name: get tag version
+        id: tag_version
+        uses: jaywcjlove/changelog-generator@v1.5.0
 
-      # - name: get tag version
-      #   id: tag_version
-      #   uses: jaywcjlove/changelog-generator@v1.5.0
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          commit_message: ${{steps.tag_version.outputs.tag}} ${{ github.event.head_commit.message }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          publish_dir: ./build
 
-      # - name: Deploy
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     commit_message: ${{steps.tag_version.outputs.tag}} ${{ github.event.head_commit.message }}
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     user_name: 'github-actions[bot]'
-      #     user_email: 'github-actions[bot]@users.noreply.github.com'
-      #     publish_dir: ./build
+      - name: Generate Changelog
+        id: changelog
+        uses: jaywcjlove/changelog-generator@v1.5.0
+        with:
+          head-ref: ${{steps.create_tag.outputs.version}}
+          filter-author: (小弟调调™|Renovate Bot)
+          filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
 
-      # - name: Generate Changelog
-      #   id: changelog
-      #   uses: jaywcjlove/changelog-generator@v1.5.0
-      #   with:
-      #     head-ref: ${{steps.create_tag.outputs.version}}
-      #     filter-author: (小弟调调™|Renovate Bot)
-      #     filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
-
-      # - name: Create Release
-      #   uses: ncipollo/release-action@v1
-      #   if: steps.create_tag.outputs.successful
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     name: ${{ steps.create_tag.outputs.version }}
-      #     tag: ${{ steps.create_tag.outputs.version }}
-      #     body: |
-      #       Documentation ${{ steps.changelog.outputs.tag }}: https://raw.githack.com/jaywcjlove/action-ejs/${{ steps.changelog.outputs.gh-pages-short-hash }}/index.html  
-      #       Comparing Changes: ${{ steps.changelog.outputs.compareurl }} 
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        if: steps.create_tag.outputs.successful
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: ${{ steps.create_tag.outputs.version }}
+          tag: ${{ steps.create_tag.outputs.version }}
+          body: |
+            Documentation ${{ steps.changelog.outputs.tag }}: https://raw.githack.com/jaywcjlove/action-ejs/${{ steps.changelog.outputs.gh-pages-short-hash }}/index.html  
+            Comparing Changes: ${{ steps.changelog.outputs.compareurl }} 
             
-      #       ${{ steps.changelog.outputs.changelog }}
+            ${{ steps.changelog.outputs.changelog }}
 
-      #       ```yml
-      #       - run: mkdir -p build
-      #       - name: Generate Website
-      #         uses: jaywcjlove/action-ejs@main
-      #         with:
-      #           template: |
-      #             <%= name %>
-      #           vars: |
-      #             { "name": "\${{ steps.stepId.outputs.name }}" }
+            ```yml
+            - name: action-ejs
+              uses: jaywcjlove/action-ejs@main
+              with:
+                template: <h1><%= name %> <span><%= conclusion %></span></h1>
+                vars: |
+                  { "name": "${{ github.repository }}", "conclusion": "${{ steps.ejs.conclusion }}" }
+            ```
 
-      #       - name: Deploy
-      #         uses: peaceiris/actions-gh-pages@v3
-      #         with:
-      #           github_token: xxxxxxx
-      #           publish_dir: ./build
-      #       ```
+            ```yml
+            - name: action-ejs
+              uses: jaywcjlove/action-ejs@main
+              with:
+                template: <div><%= LICENSE %></div><div><%= markdown %></div>
+                output: build/demo.html
+                vars-file: |
+                  {
+                    "markdown": "./README.md",
+                    "LICENSE": "./LICENSE"
+                  }
+            ```
 
-      #       <a href="https://github.com/jaywcjlove/action-ejs/graphs/contributors">
-      #         <img src="https://jaywcjlove.github.io/action-ejs/CONTRIBUTORS.svg" />
-      #       </a>
+            <a href="https://github.com/jaywcjlove/action-ejs/graphs/contributors">
+              <img src="https://jaywcjlove.github.io/action-ejs/CONTRIBUTORS.svg" />
+            </a>
