--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         uses: jaywcjlove/markdown-to-html-cli@main
         with:
           output: build/index.html
+          github-corners: https://github.com/jaywcjlove/action-ejs
           favicon: data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏞️</text></svg>
 
       - name: Generate Contributors Images
